fix shipping way

--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -4,7 +4,7 @@
             <div class="col-md-12">
                 <h4>Seleccione el método de pago</h4>
                 <div class="panel-group" id="accordion">
-                    <div class="panel panel-default">
+                    <!--<div class="panel panel-default">
                         <div class="panel-heading panel-white">
                             <h4 class="panel-title">
                                 <input type="radio" value="8" name="paymentType" id="creditCard"
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="panel panel-default">
                         <div class="panel-heading panel-white">
                             <h4 class="panel-title">
