--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -3,34 +3,31 @@
         <div class="col-md-6 address-form">
             <div class="col-md-12">
                 <h3><i class="fa fa-truck"></i> Selecciona la forma de envio</h3>{{ Payment.showAddress }}
-                <div class="panel-group">
+                <md-radio-group ng-model="Payment.sendOptions">
                     <div class="panel panel-default">
                         <div class="panel-heading panel-white">
                             <h4 class="panel-title">
-                                <input type="radio" value="1" name="sendAddress" id="choice1" ng-click="Payment.showAddress = true">
-                                <span class="fa fa-credit-card-alt">
-                                    <label for="choice1">Envío a domicilio</label>
-                                </span>
-                            </h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel-group">
-                    <div class="panel panel-default">
-                        <div class="panel-heading panel-white">
-                            <h4 class="panel-title">
+                                <md-radio-button value="0" class="md-primary"> <span class="fa fa-credit-card-alt">
+                                    Envío a domicilio
+                                </span></md-radio-button>
 
-                                <input type="radio" value="2" name="sendAddress" id="choice2" ng-click="Payment.showAddress = false">
-                                <span class="fa fa-credit-card-alt">
-                                    <label for="choice2">Recoger en tienda</label>
-                                </span>
                             </h4>
                         </div>
                     </div>
-                </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading panel-white">
+                            <h4 class="panel-title">
+                                <md-radio-button value="1"> <span class="fa fa-credit-card-alt">
+                                    Recoger en tienda
+                                </span></md-radio-button>
+
+                            </h4>
+                        </div>
+                    </div>
+                </md-radio-group>
             </div>
 
-            <div class="container-fluid" ng-if="Payment.showAddress">
+            <div class="container-fluid" ng-if="Payment.sendOptions === '0'">
                 <hr>
                 <div class="col-md-12 select-address no-padding" style="margin-bottom: 20px">
                     <h3><i class="fa fa-map-marker"></i> Seleccionar dirección existente</h3>
@@ -102,14 +99,16 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="form-item" ng-class="{ 'has-error': Form.zip.$touched && Form.zip.$invalid }">
                                 <label for="zip">Código Postal</label>
-                                <input ng-model="Payment.formData.zip" type="text" ng-pattern="/^[0-9]{5}$/" maxlength="5"
+                                <input ng-model="Payment.formData.zip" type="text" ng-pattern="/^[0-9]{5}$/"
+                                       maxlength="5"
                                        class="form-control" id="zip" name="zip"
                                        placeholder="Código Postal"
                                        required>
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <div class="form-item" ng-class="{ 'has-error': Form.phone.$touched && Form.phone.$invalid }">
+                            <div class="form-item"
+                                 ng-class="{ 'has-error': Form.phone.$touched && Form.phone.$invalid }">
                                 <label for="phone">Teléfono</label>
                                 <input ng-model="Payment.formData.phone" type="text" maxlength="20" class="form-control"
                                        id="phone"
@@ -119,9 +118,11 @@
 
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <div class="form-item" ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">
+                            <div class="form-item"
+                                 ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">
                                 <label for="mobile">Celular</label>
-                                <input ng-model="Payment.formData.mobile" type="text" ng-maxlength="20" class="form-control"
+                                <input ng-model="Payment.formData.mobile" type="text" ng-maxlength="20"
+                                       class="form-control"
                                        id="mobile"
                                        name="mobile"
                                        placeholder="Celular" required>
@@ -135,7 +136,8 @@
                     </form>
                 </div>
                 <div class="col-md-12 text-right" style="margin-top: 30px;">
-                    <a href="" class="btn btn-gray-clear" ui-sref="shopcart"><i class="fa fa-angle-left"></i> Regresar al
+                    <a href="" class="btn btn-gray-clear" ui-sref="shopcart"><i class="fa fa-angle-left"></i> Regresar
+                        al
                         carrito</a>
                     <!--<button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Order.createOrder()">Continuar</button>-->
                     <a ng-if="Payment.address" class="btn btn-blue" type="submit" ng-disabled="!Payment.address"
@@ -144,14 +146,10 @@
                        ng-disabled="Form.$invalid" ng-click="Payment.newShippingAddress()">Continuar</a>
                 </div>
             </div>
-            <div class="col-md-12 text-right" style="margin-top: 30px;" ng-show="!Payment.showAddress">
-                <a href="" class="btn btn-gray-clear" ui-sref="shopcart"><i class="fa fa-angle-left"></i> Regresar al
-                    carrito</a>
-                <!--<button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Order.createOrder()">Continuar</button>-->
-                <a ng-if="Payment.address" class="btn btn-blue" type="submit" ng-disabled="!Payment.address"
-                   ng-click="Payment.saveShippingAddress()">Continuar</a>
-                <a ng-if="!Form.$invalid && !Payment.address" class="btn btn-blue" type="submit"
-                   ng-disabled="Form.$invalid" ng-click="Payment.newShippingAddress()">Continuar</a>
+
+            <div class="col-md-12 text-right" style="margin-top: 30px;" ng-if="Payment.sendOptions === '1'">
+                <a class="btn btn-blue" type="submit"
+                   ng-disabled="Form.$invalid" ng-click="Payment.retriveInStore()">Continuar</a>
             </div>
         </div>
         <div class="col-md-6 cart-detail-ship">
