--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -36,6 +36,7 @@
     </div>    
 </div>
 <div class="text-center bottom-footer">
+    <strong><a target="_blank" href="http://www.moons.mx/catalogos/" class="white"><i class="fa fa-file-text"></i> Catálogo tradicional</a></strong><br><br>
     <p class="white">© 2017 Moons, Todos los Derechos Reservados. <br>
 Tienda Moons Mixhuca: Rio Frío #174 Col. Magdalena Mixhuca, <br>Delegacion Venustiano Carranza, C.P. 15850, CDMX.</p>
 </div>
