--- a/app/templates/shop/thanks.html
+++ b/app/templates/shop/thanks.html
@@ -3,10 +3,8 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="thanks">
-                    <h1>¡Gracias por tu compra!</h1>
-                    <p>Estaremos en contacto contigo una vez que procesemos tu orden, si tienes dudas acerca de tu
-                        pedido
-                        <br> o alguna información adicional que quieras darnos contáctanos en chat de ayuda o en <br> <a
+                    <h1>{{Thanks.title}}</h1>
+                    <p>Si tienes alguna información adicional que quieras darnos contáctanos en chat de ayuda o en <br> <a
                                 href="mailto:hola@moons.mx"> <i class="fa fa-envelope"></i> hola@moons.mx</a> | <a
                                 href="tel:5558-9023"> <i class="fa fa-phone"></i> 5558-9023 </a> | <a href="tel:5701-0693"> <i class="fa fa-phone"></i> 5701-0693</a></p>
                     <img src="img/back.png" alt="¡Vuelve pronto!">
