--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -31,7 +31,7 @@
                 <uib-tab index="1" heading="Registrarme">
                     <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
                         <div class="form-group" ng-class="{ 'has-error': registerForm.businessName.$touched && registerForm.businessName.$invalid }">
-                            <input type="text" ng-model="Access.formData.businessName" class="form-control" id="businessName" name="businessName"
+                            <input type="text" ng-model="Access.formData.contactPersonName" class="form-control" id="businessName" name="businessName"
                                     placeholder="Nombre" required>
                             <div class="help-block" ng-messages="registerForm.businessName.$error" ng-if="registerForm.businessName.$touched">
                                 <div ng-message="required">El campo nombre es requerido</div>
@@ -47,11 +47,18 @@
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
-                            <input type="email" ng-model="Access.formData.email" class="form-control" id="email" name="email"
+                            <input type="email" ng-model="Access.formData.contactPersonEmail" class="form-control" id="email" name="email"
                                     placeholder="Correo electrónico" required>
                             <div class="help-block" ng-messages="registerForm.email.$error" ng-if="registerForm.email.$touched">
                                 <div ng-message="required">Este campo es requerido.</div>
                                 <div ng-message="email">Correo electrónico no válido.</div>
+                            </div>
+                        </div>
+                        <div class="form-group" ng-class="{ 'has-error': registerForm.phone.$touched && registerForm.phone.$invalid }">
+                            <input type="text" ng-model="Access.formData.contactPersonPhone" class="form-control" id="phone" name="phone"
+                                   placeholder="Whatspp" required>
+                            <div class="help-block" ng-messages="registerForm.phone.$error" ng-if="registerForm.phone.$touched">
+                                <div ng-message="required">Este campo es requerido.</div>
                             </div>
                         </div>
                         <div class="row">
