--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -26,7 +26,8 @@ monsyellow = #ffa500
     cursor pointer
     &:hover
       opacity 1
-
+.type-payment
+  padding-left 10px
 .comments
   border 1px solid #eee
   margin 25px 0
