--- a/app/css/main.css
+++ b/app/css/main.css
@@ -19,6 +19,9 @@
 #brands .brand:hover {
   opacity: 1;
 }
+.type-payment {
+  padding-left: 10px;
+}
 .comments {
   border: 1px solid #eee;
   margin: 25px 0;
