--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -115,8 +115,8 @@
                             <h4 class="panel-title">
                                 <input type="radio" value="3" id="paypal" ng-click="Payment.paypal=!Payment.paypal"
                                        name="paymentType" ng-model="Payment.orderPaymentType">
-                                <span class="fa fa-paypal">
-                                    <label for="paypal">Pago con paypal</label>
+                                <span class="fa fa-paypal type-payment">
+                                    <label for="paypal"> Pago con paypal</label>
                                 </span>
                             </h4>
                         </div>
@@ -141,7 +141,7 @@
                         <div class="panel-heading panel-white">
                             <h4 class="panel-title">
                                 <input type="radio" id="depositBank" ng-click="Payment.depositBank=!Payment.depositBank" value="6" name="paymentType" ng-model="Payment.orderPaymentType">
-                                <span class="fa fa-university">
+                                <span class="fa fa-university type-payment">
                                     <label for="depositBank"> Depósito bancario</label></span>
                             </h4>
                         </div>
