--- a/app/templates/auth/purchase-detail.html
+++ b/app/templates/auth/purchase-detail.html
@@ -34,34 +34,13 @@
                         </span>
                     </h4>
                 </div>
-                <!--<div class="col-md-1">
+                <div class="col-md-3 pull-right" ng-if="Purchase.purchase.paymentType === 6">
                     <h4>
-                        <span ng-if="Purchase.purchase.orderStatus == 0" class="label label-sm bg-primary">
-                            {{ Purchase.purchase.purchaseStatusName }}
-                    </span>
-                        <span ng-if="Purchase.purchase.orderStatus == 1" class="label label-sm bg-war">
-                            {{ Purchase.purchase.orderStatusName }}
-                    </span>
-                        <span ng-if="Purchase.purchase.orderStatus == 2" class="label label-sm bg-default">
-                            {{ Purchase.purchase.orderStatusName}}
-                    </span>
-                        <span ng-if="Purchase.purchase.orderStatus == 3" class="label label-sm bg-default">
-                            {{ Purchase.purchase.orderStatusName}}
-                    </span>
-                        <span ng-if="Purchase.purchase.orderStatus == 4" class="label label-sm bg-green">
-                            {{ Purchase.purchase.orderStatusName}}
-                    </span>
-                        <span ng-if="Purchase.purchase.orderStatus == 5" class="label label-sm bg-war">
-                            {{ Purchase.purchase.orderStatusName}}
-                    </span>
-                        <span ng-if="Purchase.purchase.orderStatus == 6" class="label label-sm bg-danger">
-                            {{ Purchase.purchase.orderStatusName}}
-                    </span>
-                        <span ng-if="Purchase.purchase.orderStatus == 8" class="label label-sm bg-orange">
-                            {{ Purchase.purchase.orderStatusName}}
+                        <span class="label label-sm bg-primary">
+                            Adjuntar comprobante de pago
                     </span>
                     </h4>
-                </div>-->
+                </div>
             </div>
             <div class="col-md-12 text-center dash-footer">
                 <div class="col-md-3 item">
