--- a/app/templates/shop/partials/purchase-completed.html
+++ b/app/templates/shop/partials/purchase-completed.html
@@ -1,68 +1,73 @@
-<div id="content-area">
-    <div class="container">
+<div id="content-area" class="print-purchase">
+    <div class="container no-padding text-justify">
         <div class="col-md-offset-2 col-md-8">
             <h2 class="text-center">{{ Purchase.purchase.customerName }}</h2>
             <hr>
-            <div class="col-md-6">
-                <p class="text-left">Gracias por tu compra en Moon's Aquariums :),
-                    Te hemos enviamos un correo a {{ Purchase.purchase.customerEmail }}.</p>
-            </div>
-            <div class="col-md-6">
-                <h4>Numero de pedido: <span>{{ Purchase.purchase.id }}</span></h4>
-                <span>Realizado el {{ Purchase.purchase.createdAt | date: 'd/M/y' }}</span>
-            </div>
-        </div>
-        <div class="col-md-offset-2 col-md-8" style="margin-top: 10px">
-            <div class="payment-sidebar">
-                <div class="row">
-                    <div class="">
-                        <div class="table-responsive">
-                            <table class="table table-bordered">
-                                <thead>
-                                <tr>
-                                    <th width="5%">Cantidad</th>
-                                    <th width="50%">Descripción</th>
-                                    <th>Precio unitario</th>
-                                    <th>Importe</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr ng-repeat="item in Purchase.purchase.items">
-                                    <th scope="row">{{item.qty}}</th>
-                                    <td>{{item.itemId}} - {{item.name}}</td>
-                                    <td>{{item.price | currency}}</td>
-                                    <td ng-if="item.subtotalDiscount">{{item.subtotalDiscount | currency}}
-                                        <span class="glyphicon  glyphicon-exclamation-sign">
+            <h3><i class="fa fa-smile-o"></i> Gracias por tu compra en Moon's Aquariums.</h3>
+            <p>Tu compra esta pendiente de pago, hemos enviado a tu correo <strong> {{ Purchase.purchase.customerEmail
+                }}</strong> las
+                instrucciones para realizarlo
+                o si prefieres llamar al siguiente teléfono <a href="tel:5558-9023"> <i class="fa fa-phone"></i>
+                    5558-9023 </a> un asesor de moons te atenderá.</p>
+            <hr>
+            <div id="purchase-payment" class="container-fluid">
+                <div class="purchase-head" class="container-fluid no-padding">
+                    <div class="col-md-4 text-left no-padding"><span>Estatus: {{Purchase.purchase.orderStatusName}}</span>
+                    </div>
+                    <div class="col-md-4 text-center"><span>Pago: {{Purchase.purchase.paymentTypeName}}</span></div>
+                    <div class="col-md-4 text-right no-padding"><span>Pedido: #{{ Purchase.purchase.id }}</span></div>
+                    <div class="text-right">
+                        <span>Realizado el {{ Purchase.purchase.createdAt | date: 'd/M/y' }}</span>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th width="5%">Cantidad</th>
+                                <th width="50%">Descripción</th>
+                                <th>Precio unitario</th>
+                                <th>Importe</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="item in Purchase.purchase.items">
+                                <th scope="row">{{item.qty}}</th>
+                                <td>{{item.itemId}} - {{item.name}}</td>
+                                <td>{{item.price | currency}}</td>
+                                <td ng-if="item.subtotalDiscount">{{item.subtotalDiscount | currency}}
+                                    <span class="glyphicon  glyphicon-exclamation-sign">
                                             <md-tooltip md-direction="right">Este producto tuvo {{item.promotion | currency}} de descuento.</md-tooltip></span></p>
-                                    </td>
-                                    <td ng-if="!item.subtotalDiscount">{{item.subtotal | currency}}</td>
-                                </tr>
-                                <tr>
-                                    <th style="text-align: right;" colspan="3">Descuento</th>
-                                    <td>{{Purchase.purchase.promoTotal | currency}}</td>
-                                </tr>
-                                <tr>
-                                    <th style="text-align: right;" colspan="3">Subtotal</th>
-                                    <td>{{Purchase.purchase.subTotal | currency}}</td>
-                                </tr>
-                                <tr>
-                                    <th colspan="3" style="text-align: right;">IVA</th>
-                                    <td>{{Purchase.purchase.taxTotal | currency}}</td>
-                                </tr>
-                                <tr>
-                                    <th colspan="3" style="text-align: right;">TOTAL</th>
-                                    <td>{{Purchase.purchase.total | currency}}</td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                                </td>
+                                <td ng-if="!item.subtotalDiscount">{{item.subtotal | currency}}</td>
+                            </tr>
+                            <tr>
+                                <th style="text-align: right;" colspan="3">Descuento</th>
+                                <td>{{Purchase.purchase.promoTotal | currency}}</td>
+                            </tr>
+                            <tr>
+                                <th style="text-align: right;" colspan="3">Subtotal</th>
+                                <td>{{Purchase.purchase.subTotal | currency}}</td>
+                            </tr>
+                            <tr>
+                                <th colspan="3" style="text-align: right;">IVA</th>
+                                <td>{{Purchase.purchase.taxTotal | currency}}</td>
+                            </tr>
+                            <tr>
+                                <th colspan="3" style="text-align: right;">TOTAL</th>
+                                <td>{{Purchase.purchase.total | currency}}</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
                 <hr>
                 <div class="destination">
                     <h4>Direccion de entrega:</h4>
                     <p>{{ Purchase.purchase.destination.address}}, Col: {{Purchase.purchase.destination.neighborhood}},
-                    CP: {{ Purchase.purchase.destination.zip }}, {{ Purchase.purchase.destination.cityName }}, {{ Purchase.purchase.destination.stateName }}</p>
+                        CP: {{ Purchase.purchase.destination.zip }}, {{ Purchase.purchase.destination.cityName }}, {{
+                        Purchase.purchase.destination.stateName }}</p>
                 </div>
                 <hr>
                 <div class="instructionPayment" ng-if="Purchase.purchase.paymentType==6">
@@ -77,13 +82,16 @@
                                 ui-sref="sales">
                             <i class="fa fa-angle-left"></i> Regresar
                         </button>
+                        <button title="Regresar a mis compras" class="btn btn-md btn-blue"
+                                onclick="window.print();">
+                            <i class="fa fa-print"></i> Imprimir
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="thanks">
-            <img src="img/back.png" alt="¡Vuelve pronto!">
-        </div>
+    </div>
+    <div class="thanks">
+        <img src="img/back.png" alt="¡Vuelve pronto!">
     </div>
 </div>
