ajuste de estilo guaumart

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -7,7 +7,8 @@ cagreenh = #7e1a1d
 primary = #555555
 monsyellow = #ffa500
 
-
+.text-left
+  text-align left !important
 #facebook-styl
   iframe
     width 100%
@@ -103,7 +104,8 @@ p
 
 body
   font-family 'Poppins', sans-serif
-  background #f5f5f5
+  background white
+  color #555
 
 .white
   color white !important
@@ -135,7 +137,7 @@ body
   height 20px
   background-color #ccc
 .content
-  margin-top 180px
+  margin-top 256px
 .content-post
   margin 20px 0
   article
@@ -218,11 +220,17 @@ body
 .bg-danger
   background-color #d22626 !important
 
-
+i
+  vertical-align middle
 .log-section-mobile
   display none
 
 .navbar-info
+  .list-social li i
+    margin-top 10px
+
+  .list-social li:nth-last-child(1)
+    display none
   .dropdown-menu
     z-index 99999
   .shopping-cart
@@ -301,37 +309,35 @@ header
   -ms-transition height 0.3s
   -o-transition height 0.3s
   transition height 0.3s
-  box-shadow 0 0px 23px rgba(0,0,0,0.1)
 .header
   text-align center
 
   .navbar-default
-    background-color white
+    background-color #ff9039
     left 0
     right 0
-    height 120px
+    height 70px
     border-radius 0
     margin-bottom 0
-    border-top 1px solid #eee
+    border none
     .navbar-nav > li > .shopping-cart
       padding 0 30px 0px 16px !important
     .navbar-brand
       padding 5px 15px
     .navbar-nav > li > a
-      color catext
-      padding 22px 20px
-      font-size 16px
+      color white
+      padding 25px 10px
+      font-size 15px
       font-family 'Poppins', sans-serif
       font-weight 300
+      text-transform uppercase
       -webkit-transition all ease-in-out .35s
       -o-transition all ease-in-out .35s
       transition all ease-in-out .35s
-    .navbar-nav > li > a
-      &:first-child
-        padding 46px 20px 10px 0px  
+      font-weight bold
     .navbar-nav > li > a:hover, .navbar-nav > li > a:focus
-      background-color transparent
-      color cagreen
+      background-color rgba(0,0,0,0.1)
+      color white
     .container-fluid
       display table
       margin 0 auto
@@ -346,11 +352,18 @@ header
           border none
 
   .logo
-    width 100px
-    margin-top 5px
+    height 80px
+    margin-top -10px
 
   .logo-white
       display none
+.prod-title
+  color #555
+  text-transform uppercase
+  h1
+    font-size 28px
+.box-products
+  margin-top 50px
 .middle-space
   background-color white
   padding 10px 0
@@ -364,8 +377,6 @@ header
 #section-promo
   background-color white
   padding 50px 0
-  border-top 1px solid #eee
-  border-bottom 1px solid #eee
 #security
   text-align center
   background #f5f5f5
@@ -459,6 +470,14 @@ header
   background-image none
 .carousel-inner
   background-color transparent
+  border-radius 5px
+.slogan
+  font-size 20px
+  color #2e8aca
+  letter-spacing 3px
+  line-height 0
+#section-prom
+  margin-top 120px
 /*.carousel-control
   display none
 .carousel-indicators
@@ -505,10 +524,9 @@ header
 
 /*header info*/
 .navbar-info
-  background-image url('../img/cats-dogs.png')
+  background-color white
   padding 0.8em 0 0em
-  background-color #fff
-  background-size 215px
+  border-bottom 1px solid #ddd
   a
     color catext
     font-size 15px
@@ -548,11 +566,17 @@ header
 .content-area2
   margin 0
   padding 70px 0
-  background-color #fff    
+  background-color #fff
+.header-title-page
+  background-color #eee
+  padding 20px 0
+  .prod-title
+    margin-bottom 0
+    font-size 26px
 #content-area
-  margin 0
+  margin-top 0
   padding 50px 25px 70px
-  background-color #f5f5f5
+  background-color white
   .title-category
     text-align left
     color #746857
@@ -647,9 +671,9 @@ header
       padding 35px 20px
       text-align left
       color #fff
-#news
+#brands
   padding 60px 0
-  background-color #f5f5f5
+  background-color white
 
 .title
   color #777  
@@ -695,9 +719,12 @@ header
     .img-prod
       padding-bottom 15px
     .box-container
-      height 100px !important
       p
         font-size 16px
+        height 40px !important
+      h4
+        font-weight bold
+        color #fa7203
     .prod-descrip
       color #717171
       height 65px
@@ -717,7 +744,7 @@ header
   a  
     font-size 18px
     color #777
-    padding-left 15px
+    padding-right 15px
     &:hover
       color cagreen
 
@@ -800,6 +827,8 @@ header
       margin-bottom 25px
   .detail-price
     text-align left
+    color darkorange
+    font-weight bold
   .prod-detail-descrip
     p
       font-size 18px
@@ -937,6 +966,7 @@ header
   background-repeat no-repeat
   background-size cover
   text-align center
+
   h3
     text-align left
     font-weight 300
@@ -984,8 +1014,9 @@ header
       &:hover
         color #ff7300
 .box-widget
-  padding 5px 0
-  border 1px solid #ccc
+  padding: 5px 0;
+  border: 1px solid #eee;
+  border-radius: 5px;
   .widget-title
     padding-left 10px
     font-weight bold
@@ -1248,9 +1279,11 @@ header
       font-size 20px
       color #746857
   .list > li > a, .list > li > a > span > p
-    color #746857
-    font-size 28px
-
+    color #555
+    font-size 20px
+.box-bordered
+  border 1px solid #eee
+  padding 20px
 /* Projects detail */
 .recommendations-detail
   padding-top 60px
@@ -1406,11 +1439,11 @@ header
 /************** footer area css ******************/
 #footer-top
   padding 80px 0 
-  background-image: url(../img/bg-contact.jpg);
-  background-size: cover;
-  background-position: center;
+  background-color #444444
+  background-size cover
+  background-position center
 .bottom-footer
-  background-color #1887ce
+  background-color #5A5A5A
   padding 30px 0  
 footer
   .white
@@ -1425,6 +1458,10 @@ footer
       padding-bottom 5px
       font-size 18
       border-bottom 1px solid white
+    .list-social-media
+      padding 0
+      li > a
+        color white
     .list
       a
         color white
@@ -1559,7 +1596,7 @@ footer
   padding 10px 15px !important
   color white !important
   font-weight 300
-  border-radius 0
+  border-radius 5px
   
   &:hover, &:focus
     background-color #136A9B !important
@@ -1567,7 +1604,6 @@ footer
     padding 10px 15px !important
     color white
     font-weight 300
-    border-radius 0
     border 1px solid #136A9B
 
 .btn-gray
@@ -1876,7 +1912,8 @@ footer
     color #3a2103
 .contact-section
   background transparent
-  //margin-top 100px
+  .list-social-media
+    padding 0
 .form-item
   padding-top 5px
 .cart-qty
@@ -2032,9 +2069,7 @@ footer
   width 100%
   height 100%
   opacity 1
-  background: #56CCF2;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #f5f5f5;  /* fallback for old browsers */
 
 
 .block-ui-message
@@ -2057,7 +2092,7 @@ footer
       margin 0 auto
       width 20%
       height 20%
-      background-color white
+      background-color orange
       border-radius 100%
       -webkit-animation sk-circleBounceDelay 1.2s infinite ease-in-out both
       animation sk-circleBounceDelay 1.2s infinite ease-in-out both
@@ -2260,3 +2295,19 @@ footer
   .content
     margin 0
 
+.login-content
+  padding 15px 0
+
+.owl-carousel
+  text-align center
+  .owl-item
+    padding 15px
+    text-align center
+
+.owl-carousel .owl-item img
+  width auto
+  height 100px
+  margin 0 auto
+  opacity 0.6
+  &:hover
+    opacity 1
