--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -1,6 +1,6 @@
 <div class="header-title-page">
-    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
-        <h2 class="title">{{ Page.detail.title }}</h2>
+    <div class="container">
+        <h1 class="prod-title col-md-12">{{ Page.detail.title }}</h1>
     </div>
 </div>
 <section id="content-area">
