--- a/app/templates/project_detail.html
+++ b/app/templates/project_detail.html
@@ -1,4 +1,8 @@
-<section class="main-bg-pages" style="background-image: url('../img/imagee.jpg')"></section>
+<div class="header-title-page">
+    <div class="container">
+        <h1 class="prod-title col-md-12">{{ Page.detail.title }}</h1>
+    </div>
+</div>
 <section id="product-detail">
     <div class="col-md-12 title-detail" style="background-image: url('{{ Item.detail.urlImages.large ? Item.detail.urlImages.large : 'http://media.tingsystems.com/media/vive-en-armonia/pollitux/2016/16/img-default-original.jpeg'}}');">
         <div class="content-title">
