--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,75 +1,76 @@
-<div class="header-title">
-    <h2 class="title text-center">Contacto</h2>
+<div class="header-title-page">
+    <div class="container">
+        <h1 class="prod-title col-md-12">Contáctanos</h1>
+    </div>
 </div>
 <section id="content-area">
-            <div class="container">
-                <div class="contact-section">
-                    <div class="social-media">
+    <div class="container">
+        <div class="contact-section">
+            <div class="social-media">
+                <div class="col-md-6">
+                    <div class="social box-bordered">
+                        <ul class="list">
+                            <li ng-repeat="post in contactMenuData">
+                                <a class="contact-foo-side" href="{{ post.excerpt }}"><i
+                                        class="{{ post.title }}"></i> <span
+                                        ng-bind-html="post.content | trustHtml"></span></a>
+                            </li>
+                        </ul>
+
+                        <ul class="list list-sidebar">
+                            <!--<li ng-repeat="item in mainNavMenu">-->
+                            <li ng-repeat="item in NavMenuSocial">
+                                <a href="{{ item.link }}" target="_blank"><i class="{{ item.name }}"
+                                                                             data-pack="social"></i></a>
+                            </li>
+                        </ul>
+                        <ul class="list-social-media text-left">
+                            <li ng-repeat="post in socialMedia">
+                                <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
+                                        ng-bind-html="post.content | trustHtml"></span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <form class="form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
+                          ng-init="Contact.notification.subject = 'Formulario de contacto'">
+                        <div class="box-bordered container-fluid">
                         <div class="col-md-6">
-                            <div class="col-md-12 title-post">
-                                <h3 class="title">Llámanos</h3>
-                                <hr/>
+                                <label for="name">Nombre *</label>
+
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
+                                       required ng-model="Contact.notification.name">
+
+                                <label for="email">Email *</label>
+
+                                <input type="email" class="form-control" id="email" name="email"
+                                       placeholder="Email" required
+                                       ng-model="Contact.notification.email">
+
+
+                                <label for="phone">Teléfono *</label>
+                                <input type="text" class="form-control" id="phone" name="phone"
+                                       placeholder="Teléfono" required ng-model="Contact.notification.phone">
                             </div>
-                            <div class="social">
-                                <ul class="list">
-                                    <li ng-repeat="post in contactMenuData">
-                                        <a class="contact-foo-side" href="{{ post.excerpt }}"><i
-                                                class="{{ post.title }}"></i> <span
-                                                ng-bind-html="post.content | trustHtml"></span></a>
-                                    </li>
-                                </ul>
-
-                                <ul class="list list-sidebar">
-                                    <!--<li ng-repeat="item in mainNavMenu">-->
-                                    <li ng-repeat="item in NavMenuSocial">
-                                        <a href="{{ item.link }}" target="_blank"><i class="{{ item.name }}"
-                                                                                     data-pack="social"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="col-md-12 title-post">
-                                <h3 class="title">Envíanos un mensaje</h3>
-                                <hr/>
-                            </div>
-                            <form class="padding form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
-                                  ng-init="Contact.notification.subject = 'Formulario de contacto'">
-                                <div class="col-md-6">
-
-                                    <label for="name">Nombre *</label>
-
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
-                                           required ng-model="Contact.notification.name">
-
-                                    <label for="email">Email *</label>
-
-                                    <input type="email" class="form-control" id="email" name="email"
-                                           placeholder="Email" required
-                                           ng-model="Contact.notification.email">
-
-
-                                    <label for="phone">Teléfono *</label>
-                                    <input type="text" class="form-control" id="phone" name="phone"
-                                           placeholder="Teléfono" required ng-model="Contact.notification.phone">
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="email">Escribe tu mensaje *</label>
+                            <div class="col-md-6">
+                                <label for="email">Escribe tu mensaje *</label>
                                 <textarea class="form-control" id="message" name="message" rows="7"
                                           placeholder="Escribe tu mensaje *" required
                                           ng-model="Contact.notification.message"></textarea>
 
-                                    <div style="text-align: right;">
-                                        <button type="submit" class="btn btn-cart" ng-disabled="Contact.busy">
-                                            Enviar <span ng-if="Contact.busy"><i
-                                                class="fa fa-spinner fa-spin"></i></span>
-                                        </button>
+                                <div style="text-align: right;">
+                                    <button type="submit" class="btn btn-cart" ng-disabled="Contact.busy">
+                                        Enviar <span ng-if="Contact.busy"><i
+                                            class="fa fa-spinner fa-spin"></i></span>
+                                    </button>
 
-                                    </div>
                                 </div>
-                            </form>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
+        </div>
+    </div>
 </section>
