--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,44 +1,43 @@
-<div id="footer-top" style="background-image: url('../img/bg-contact.jpg')">
+<div id="footer-top">
     <div class="container">
-        <div class="col-sm-3 contact-sty">
+        <div class="col-sm-4 contact-sty">
             <h3>
                 Información
             </h3>
             <ul class="list">
-                <li ng-repeat="option in footerNavMenuConact"><a href="{{option.link}}">{{option.name}}</a></li>
+                <li ng-repeat="post in information">
+                    <a class="contact-foo-side" ui-sref="post_detail({slug: post.slug})">
+                        <span>{{ post.title }}</span>
+                    </a>
+                </li>
             </ul>
         </div>
-        <div class="col-sm-3 contact-sty">
-            <h3>
-                Ayuda
-            </h3>
-            <ul class="list">
-                <li ng-repeat="option in contactHelp"><a href="{{option.link}}">{{option.name}}</a></li>
-            </ul>
-        </div>
-        <div class="col-sm-3 contact-sty">
+        <div class="col-sm-4 contact-sty">
             <h3>Contáctanos</h3>
             <ul class="list">
                 <li ng-repeat="post in contactMenuData">
                     <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
                             ng-bind-html="post.content | trustHtml"></span></a>
                 </li>
-                <li>Atención en el chat de Lunes a Viernes de 9 a 21 hrs y Sábado y Domingo de 9 a 18:30 hrs </li>
+            </ul>
+            <ul class="list-social-media text-left">
+                <li ng-repeat="post in socialMedia">
+                    <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
+                            ng-bind-html="post.content | trustHtml"></span></a>
+                </li>
             </ul>
         </div>
-        <div class="col-sm-3 contact-sty payment-type">
-            <h3>Formas de pago</h3> 
+        <div class="col-sm-4 contact-sty payment-type">
+            <h3>Formas de pago</h3>
             <i><img src="img/paypal-1.png" alt="Paypal"></i>
             <i><img src="img/master-card.png" alt="Master card"></i>
             <i><img src="img/american.png" alt="American express"></i>
             <i><img src="img/visa.png" alt="Visa"></i>
         </div>
-    </div>    
+    </div>
 </div>
 <div class="text-center bottom-footer">
-    <strong><a target="_blank" href="http://www.moons.mx/catalogos/" class="white"><i class="fa fa-file-text"></i> Catálogo tradicional</a></strong><br><br>
-    <p class="white">© 2017 Moons, Todos los Derechos Reservados. <br>
-Tienda Moons Mixhuca: Rio Frío #174 Col. Magdalena Mixhuca, <br>Delegacion Venustiano Carranza, C.P. 15850, CDMX.</p>
+    <p class="white">© 2018 Guaumart S.A de C.V. , Todos los Derechos Reservados.</p>
 </div>
 
     
