--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 <hr class="no-margin">
-<section id="content-area" class="content-blog product-detail container" ng-controller="ShoppingCtrl as Shop">
+<section id="content-area" class="product-detail container" ng-controller="ShoppingCtrl as Shop">
     <div class="col-sm-4">
          <div id="carouse-principal" class="carousel slide" style="margin-bottom: 25px">
             <!-- Wrapper for slides -->
@@ -28,9 +28,9 @@
     <div class="col-sm-8">
         <h3 class="detail-title">{{Product.detail.name}}</h3>
         <hr>
-        <div class="col-sm-4 text-left" ng-controller="AccessCtrl as Access">
-            <h3 class="detail-price" ng-if="Access.isAuthenticated()">{{ Product.detail.price | currency}}</h3>
-            <div class="detail-qty" ng-if="Access.isAuthenticated()">
+        <div class="container-fluid text-left" ng-controller="AccessCtrl as Access">
+            <h3 class="detail-price">{{ Product.detail.price | currency}}</h3>
+            <div class="detail-qty">
                 <small>Cantidad</small>
                 <input type="number" placeholder="0" ng-model="Product.detail.qty" class="form-control cart-qty" min="1" required>
             </div>
@@ -39,10 +39,15 @@
                                         price: Product.detail.price, image: Product.detail.featuredImage.url,
                                         qty: Product.detail.qty, taxonomies : Product.detail.taxonomies}, Product.detail.qty)"
                         ng-disabled="Shop.itemInCart(Product.detail.id)"
-                        class="btn btn-orange" ng-if="Access.isAuthenticated()">Agregar a carrito</button>
+                        class="btn btn-orange">Agregar a carrito</button>
             </div>
         </div>
-        <h4 class="prod-detail-descrip" ng-bind-html="Product.detail.description | trustHtml">
-            {{Product.detail.description}}</h4>
+
+        <div class="container-fluid">
+            <hr>
+            <h4>Descripción</h4>
+            <h4 class="prod-detail-descrip" ng-bind-html="Product.detail.description | trustHtml">
+                {{Product.detail.description}}</h4>
+        </div>
     </div>
 </section>
