ajuste en texto de sweet alert y en sidebar de filtros por categoria

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -998,15 +998,16 @@ header
 .see-more
   padding 25px
 .box-widget-white
-  background-color white
+  background-color #f9f9f9
   border none 
   border-radius 3px
   box-shadow 0 0 10px rgba(0,0,0,0.05)
   padding 15px
   .widget-title-first
-    background #ff7300
+    background transparent
     padding 10px 5px
-    color white !important
+    color #555 !important
+    border-bottom 1px solid #eee
   ul 
     li > a
       color #555555
