--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1180,16 +1180,17 @@ color
   padding: 25px;
 }
 .box-widget-white {
-  background-color: #fff;
+  background-color: #f9f9f9;
   border: none;
   border-radius: 3px;
   box-shadow: 0 0 10px rgba(0,0,0,0.05);
   padding: 15px;
 }
 .box-widget-white .widget-title-first {
-  background: #ff7300;
+  background: transparent;
   padding: 10px 5px;
-  color: #fff !important;
+  color: #555 !important;
+  border-bottom: 1px solid #eee;
 }
 .box-widget-white ul li > a {
   color: #555;
